# ICE-ID-2.0

./: .gitattributes  .gitignore  QUICK_START.md  README.md  requirements.txt
bench/: README.md  pyproject.toml  requirements.txt
bench/bench/: __init__.py  cli.py
bench/bench/blocking/: __init__.py  base.py  geo_hierarchy.py  phonetic_blocking.py  token_blocking.py
bench/bench/calibration/: __init__.py  base.py  fixed_threshold.py  isotonic.py  platt.py
bench/bench/clustering/: __init__.py  base.py  connected_components.py  hac.py
bench/bench/config/: schema.py
bench/bench/core/: __init__.py  random.py  registry.py  types.py
bench/bench/metrics/: __init__.py  (+4 more)
bench/benchmark_results/: FULL_BENCHMARK_REPORT.md  all_results.csv  anymatch_results.csv  baseline_eval.csv  ditto_results.csv  external_models_results.csv  hiergat_results.csv  hiergat_results_verified.csv  missing_results.csv  nars_ablations_consistent.csv  nars_calibration_sensitivity.csv  nars_full_eval.csv  nars_graph_eval.csv  nars_rerun_all.csv  opennars_results.csv  zeroer_results.csv
bench/paper_artifacts/: nars_calibration_sensitivity.json  nars_full_eval.json  nars_graph_eval.json  nars_judgment_weights.json  nars_pair_explanations.json  nars_rerun_all.json
bench/results/: nars_ablations.csv  nars_calibration_sensitivity.csv  nars_graph_eval.csv  nars_rerun_all.csv
bench/scripts/: __init__.py  extract_nars_explanations.py  fetch_external_datasets.py  generate_paper_artifacts.py  prepare_data.py  run_baseline_eval.py  run_experiments.py  run_nars_ablations.py  run_nars_full_eval.py
(+87 files in other folders)
